Topic detail page

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -8491,3 +8491,9 @@ body {
   border-top: 1px solid #dcebf5;
 }
 
+/* Topic Create Page */
+
+.topics-create-page .simditor-body img {
+  max-width: 100%;
+}
+
