--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -139,3 +139,10 @@ body {
         }
     }
 }
+
+/* Topic Create Page */
+.topics-create-page {
+    .simditor-body img {
+        max-width: 100%;
+    }
+}
